--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
         </div>
         <div class="hero_banner_right">
           <div class="hand_image">
-            <img src="./assets/hand.png" alt="Hand" />
+            <img src="./hand.png" alt="Hand" />
           </div>
           <div class="bottle_image">
-            <img src="./assets/soothbottle.png" alt="bottle" />
+            <img src="./soothbottle.png" alt="bottle" />
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
+                    <img src="./acne_cream.png" alt="Acne Cream" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -167,7 +167,7 @@
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
+                    <img src="./vitiligio.png" alt="Vitiligio" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -188,7 +188,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background">
-                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
+                    <img src="./soothbottle.png" alt="sooth bottle" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -209,7 +209,7 @@
                     <div class="discount_box">
                       <h5>15% off</h5>
                     </div>
-                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
+                    <img src="./sunburn.png" alt="Sunburn" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -251,7 +251,7 @@
           </div>
         </div>
         <div class="teaser_img">
-          <img src="./assets/smiling_boy.png" />
+          <img src="./smiling_boy.png" alt="smiling boy"/>
         </div>
       </div>
     </section>
@@ -274,7 +274,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/Psoriasis.png" alt="Denim Jeans" />
+                    <img src="./Psoriasis.png" alt="Psoriasis" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
@@ -293,7 +293,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
+                    <img src="./soothbottle.png" alt="sooth bottle" />
                   </div>
                   <div class="card_content">
                     <h5>Ezcema Cream</h5>
@@ -314,7 +314,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
+                    <img src="./sunburn.png" alt="sunburn" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Ointment</h5>
@@ -332,7 +332,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiligio_balm.png" alt="Denim Jeans" />
+                    <img src="./vitiligio_balm.png" alt="vitiligio_balm" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Balm</h5>
@@ -355,7 +355,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
+                    <img src="./vitiligio.png" alt="vitiligio" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Solution</h5>
@@ -374,7 +374,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
+                    <img src="./acne_cream.png" alt="acne_cream" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -395,7 +395,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/acne_cream_2.png" alt="Denim Jeans" />
+                    <img src="./acne_cream_2.png" alt="acne_cream_2" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -413,7 +413,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/Ezcema_oil.png" alt="Denim Jeans" />
+                    <img src="./Ezcema_oil.png" alt="Ezcema_oil" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -444,7 +444,7 @@
     >
       <div class="Second_teaser">
         <div class="Second_teaser_img">
-          <img src="./assets/Single_hand.png" />
+          <img src="./Single_hand.png" alt="Single_hand" />
         </div>
         <div class="Second_teaser_content">
           <div class="Second_teaser_content_box">
@@ -479,8 +479,8 @@
                 <div class="card">
                   <div class="image_bg">
                     <img
-                      src="./assets/psoriasis_treatment@2x.png"
-                      alt="Denim Jeans"
+                      src="./psoriasis_treatment@2x.png"
+                      alt="psoriasis_treatment"
                     />
                   </div>
                   <div class="card_content">
@@ -500,7 +500,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/suburn_balm@2x.png" alt="Denim Jeans" />
+                    <img src="./suburn_balm@2x.png" alt="suburn_balm" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Balm</h5>
@@ -521,7 +521,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/soothbottle.png" />
+                    <img src="./soothbottle.png" alt="soothbottle" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
@@ -539,7 +539,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiglio_treatment@2x.png" />
+                    <img src="./vitiglio_treatment@2x.png" alt="vitiglio_treatment"/>
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Treatment</h5>
@@ -578,17 +578,17 @@
           </div>
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./assets/cacao.png" />
+              <img src="./cacao.png" alt="cacao"/>
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/honey.png" />
+              <img src="./honey.png" alt="honey"/>
               <h6>Honey</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/mint.png" />
+              <img src="./mint.png" alt="mint"/>
               <h6>Mint</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
@@ -596,17 +596,17 @@
 
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./assets/coconut_root.png" />
+              <img src="./coconut_root.png" alt="coconut_root"/>
               <h6>Coconut root</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/flour.png" />
+              <img src="./flour.png" alt="flour"/>
               <h6>Flour</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/cacao_1.png" />
+              <img src="./cacao_1.png" alt="cacao_1"/>
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
