--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Capstone</title>
-    <link rel="stylesheet" href="./Style.css" />
+    <link rel="stylesheet" href="./style/Style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -37,9 +37,7 @@
 
     <!-- Header Section -->
 
-    <section
-      class=".aem-Grid.aem-Grid--12 > .aem-GridColumn.aem-GridColumn--phone--12"
-    >
+    <section class=".aem-Grid.aem-Grid--12 > .aem-GridColumn.aem-GridColumn--phone--12">
       <nav class="navbar">
         <div class="navbar-container container">
           <input type="checkbox" name="" id="" />
@@ -102,10 +100,10 @@
         </div>
         <div class="hero_banner_right">
           <div class="hand_image">
-            <img src="./hand.png" alt="Hand" />
+            <img src="./assets/hand.png" alt="Hand" />
           </div>
           <div class="bottle_image">
-            <img src="./soothbottle.png" alt="bottle" />
+            <img src="./assets/soothbottle.png" alt="bottle" />
           </div>
         </div>
       </div>
@@ -129,9 +127,7 @@
     <!-- Product Teaser Section -->
 
     <div class="product_teaser_section">
-      <section
-        class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12 container products_data"
-      >
+      <section class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12 container products_data">
         <div class="product_teaser">
           <div class="popular_all_products">
             <h5>Most Popular</h5>
@@ -140,12 +136,12 @@
           <div class="Products">
             <div class="product_box_1">
               <div class="product_1">
-                <div class="card">
+                <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
                   <div class="image_bg">
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./acne_cream.png" alt="Acne Cream" />
+                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -162,12 +158,12 @@
                 </div>
               </div>
               <div class="product_2">
-                <div class="card">
+                <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
                   <div class="image_bg">
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./vitiligio.png" alt="Vitiligio" />
+                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -186,9 +182,9 @@
             </div>
             <div class="product_box_2">
               <div class="product_1">
-                <div class="card">
+                <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
                   <div class="image_background">
-                    <img src="./soothbottle.png" alt="sooth bottle" />
+                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -204,12 +200,12 @@
                 </div>
               </div>
               <div class="product_2">
-                <div class="card">
+                <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
                   <div class="image_bg">
                     <div class="discount_box">
                       <h5>15% off</h5>
                     </div>
-                    <img src="./sunburn.png" alt="Sunburn" />
+                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -251,7 +247,7 @@
           </div>
         </div>
         <div class="teaser_img">
-          <img src="./smiling_boy.png" alt="smiling boy"/>
+          <img src="./assets/smiling_boy.png" />
         </div>
       </div>
     </section>
@@ -274,13 +270,12 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./Psoriasis.png" alt="Psoriasis" />
+                    <img src="./assets/Psoriasis.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
                     <p>All Natural ingredients</p>
                     <p class="price">$24.99</p>
-
                     <p>
                       <button>
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -293,7 +288,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./soothbottle.png" alt="sooth bottle" />
+                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Ezcema Cream</h5>
@@ -314,7 +309,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./sunburn.png" alt="sunburn" />
+                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Ointment</h5>
@@ -332,7 +327,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./vitiligio_balm.png" alt="vitiligio_balm" />
+                    <img src="./assets/vitiligio_balm.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Balm</h5>
@@ -355,7 +350,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./vitiligio.png" alt="vitiligio" />
+                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Solution</h5>
@@ -374,7 +369,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./acne_cream.png" alt="acne_cream" />
+                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -395,7 +390,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./acne_cream_2.png" alt="acne_cream_2" />
+                    <img src="./assets/acne_cream_2.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -413,7 +408,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./Ezcema_oil.png" alt="Ezcema_oil" />
+                    <img src="./assets/Ezcema_oil.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -444,7 +439,7 @@
     >
       <div class="Second_teaser">
         <div class="Second_teaser_img">
-          <img src="./Single_hand.png" alt="Single_hand" />
+          <img src="./assets/Single_hand.png" />
         </div>
         <div class="Second_teaser_content">
           <div class="Second_teaser_content_box">
@@ -479,8 +474,8 @@
                 <div class="card">
                   <div class="image_bg">
                     <img
-                      src="./psoriasis_treatment@2x.png"
-                      alt="psoriasis_treatment"
+                      src="./assets/psoriasis_treatment@2x.png"
+                      alt="Denim Jeans"
                     />
                   </div>
                   <div class="card_content">
@@ -500,7 +495,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./suburn_balm@2x.png" alt="suburn_balm" />
+                    <img src="./assets/suburn_balm@2x.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Balm</h5>
@@ -521,7 +516,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./soothbottle.png" alt="soothbottle" />
+                    <img src="./assets/soothbottle.png" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
@@ -539,7 +534,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./vitiglio_treatment@2x.png" alt="vitiglio_treatment"/>
+                    <img src="./assets/vitiglio_treatment@2x.png" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Treatment</h5>
@@ -578,17 +573,17 @@
           </div>
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./cacao.png" alt="cacao"/>
+              <img src="./assets/cacao.png" />
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./honey.png" alt="honey"/>
+              <img src="./assets/honey.png" />
               <h6>Honey</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./mint.png" alt="mint"/>
+              <img src="./assets/mint.png" />
               <h6>Mint</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
@@ -596,17 +591,17 @@
 
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./coconut_root.png" alt="coconut_root"/>
+              <img src="./assets/coconut_root.png" />
               <h6>Coconut root</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./flour.png" alt="flour"/>
+              <img src="./assets/flour.png" />
               <h6>Flour</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./cacao_1.png" alt="cacao_1"/>
+              <img src="./assets/cacao_1.png" />
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
@@ -654,9 +649,7 @@
 
     <!-- News Letter Section -->
 
-    <section
-      class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12"
-    >
+    <section class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12">
       <div class="news_letter">
         <div class="container">
           <div class="News_letter_box">
@@ -683,6 +676,81 @@
     </section>
 
     <!-- News Letter Section -->
+
+    <!-- Footer Section -->
+
+    <section class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12">
+        <div class="footer">
+            <div class="container">
+                <div class="footer_part">
+                  <div class="Left_part_footer">
+                    <h6>sooth</h6>
+                    <p>Explore our innovative skincare products</p>
+                    <div class="field searchbox" id="searchform">
+                      <input type="text" id="searchterm" />
+                      <button type="button" id="search">Subscribe</button>
+                    </div>
+                  </div>
+                  <div class="right_part_footer">
+                      <div class="footer_links_left_part">
+                          <div class="shop">
+                              <p>Shop</p>
+                              <ul>
+                                <li>Lorem ipsum al</li>
+                                <li>Dolar at</li>
+                                <li>Veraotio</li>
+                                <li>Chauloe</li>
+                              </ul>
+                          </div>
+                          <div class="about">
+                              <p>About</p>
+                              <ul>
+                                <li>About Us</li>
+                                <li>Sooth Stories (Blog)</li>
+                                <li>Contact Us</li>
+                                <li>Learn More</li>
+                                <li>Stories</li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="footer_links_right_part">
+                        <div class="more">
+                          <p>More</p> 
+                          <ul>
+                            <li>Dolar at</li>
+                            <li>Lorem at al</li>
+                            <li>Veraotio</li>
+                          </ul>
+                      </div>
+                      </div>
+                  </div>
+                  
+                </div>
+                <hr>
+                <div class="lower_footer_part">
+                  <h6>SOOTH ALL RIGHTS RESERVED</h6>
+                  <div class="Privacy_and_social">
+                    <div class="Privacy_Policy">
+                      <ul>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Use</li>
+                        <li>Contact Us</li>
+                      </ul>
+                    </div>
+                    <div class="social_media">
+                      <ul>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
   </body>
-  <script src="./JS/script.js"></script>
 </html>
