--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 
     <!-- Hero Banner Section -->
 
-    <section
-      class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12"
-    >
+    <section class=".aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--12">
       <div class="hero_banner">
         <div class="hero_banner_left">
           <div class="new_box">
@@ -137,11 +135,13 @@
             <div class="product_box_1">
               <div class="product_1">
                 <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
-                  <div class="image_bg">
+                  <div class="image_bg bg_image_box_1" id="bg_1">
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
+                    <!-- <div class="forward_image">
+                      <img src="./assets/acne_cream.png" alt="acne_cream" />
+                    </div> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -159,11 +159,11 @@
               </div>
               <div class="product_2">
                 <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
-                  <div class="image_bg">
+                  <div class="image_bg bg_image_box_2" id="bg_1">
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
+                    <!-- <img src="./assets/vitiligio.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -183,8 +183,8 @@
             <div class="product_box_2">
               <div class="product_1">
                 <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
-                  <div class="image_background">
-                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
+                  <div class="image_background bg_image_box_3" id="bg_1">
+                    <!-- <img src="./assets/soothbottle.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -201,11 +201,11 @@
               </div>
               <div class="product_2">
                 <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
-                  <div class="image_bg">
+                  <div class="image_bg bg_image_box_4" id="bg_1">
                     <div class="discount_box">
                       <h5>15% off</h5>
                     </div>
-                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
+                    <!-- <img src="./assets/sunburn.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
