--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Capstone</title>
-    <link rel="stylesheet" href="./style/Style.css" />
+    <link rel="stylesheet" href="./Style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -98,10 +98,10 @@
         </div>
         <div class="hero_banner_right">
           <div class="hand_image">
-            <img src="./assets/hand.png" alt="Hand" />
+            <img src="./hand.png" alt="Hand" />
           </div>
           <div class="bottle_image">
-            <img src="./assets/soothbottle.png" alt="bottle" />
+            <img src="./soothbottle.png" alt="bottle" />
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
                       <h5>New!</h5>
                     </div>
                     <!-- <div class="forward_image">
-                      <img src="./assets/acne_cream.png" alt="acne_cream" />
+                      <img src="./acne_cream.png" alt="acne_cream" />
                     </div> -->
                   </div>
                   <div class="card_content">
@@ -163,7 +163,7 @@
                     <div class="new_box">
                       <h5>New!</h5>
                     </div>
-                    <!-- <img src="./assets/vitiligio.png" alt="Denim Jeans" /> -->
+                    <!-- <img src="./vitiligio.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -184,7 +184,7 @@
               <div class="product_1">
                 <div class="aem-GridColumn aem-GridColumn--default--1   aem-GridColumn--phone--1 card">
                   <div class="image_background bg_image_box_3" id="bg_1">
-                    <!-- <img src="./assets/soothbottle.png" alt="Denim Jeans" /> -->
+                    <!-- <img src="./soothbottle.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -205,7 +205,7 @@
                     <div class="discount_box">
                       <h5>15% off</h5>
                     </div>
-                    <!-- <img src="./assets/sunburn.png" alt="Denim Jeans" /> -->
+                    <!-- <img src="./sunburn.png" alt="Denim Jeans" /> -->
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -247,7 +247,7 @@
           </div>
         </div>
         <div class="teaser_img">
-          <img src="./assets/smiling_boy.png" />
+          <img src="./smiling_boy.png" />
         </div>
       </div>
     </section>
@@ -270,7 +270,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/Psoriasis.png" alt="Denim Jeans" />
+                    <img src="./Psoriasis.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
@@ -288,7 +288,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/soothbottle.png" alt="Denim Jeans" />
+                    <img src="./soothbottle.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Ezcema Cream</h5>
@@ -309,7 +309,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/sunburn.png" alt="Denim Jeans" />
+                    <img src="./sunburn.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Ointment</h5>
@@ -327,7 +327,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiligio_balm.png" alt="Denim Jeans" />
+                    <img src="./vitiligio_balm.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Balm</h5>
@@ -350,7 +350,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiligio.png" alt="Denim Jeans" />
+                    <img src="./vitiligio.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Solution</h5>
@@ -369,7 +369,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/acne_cream.png" alt="Denim Jeans" />
+                    <img src="./acne_cream.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -390,7 +390,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/acne_cream_2.png" alt="Denim Jeans" />
+                    <img src="./acne_cream_2.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -408,7 +408,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/Ezcema_oil.png" alt="Denim Jeans" />
+                    <img src="./Ezcema_oil.png" alt="Denim Jeans" />
                   </div>
                   <div class="card_content">
                     <h5>Acne Cream</h5>
@@ -439,7 +439,7 @@
     >
       <div class="Second_teaser">
         <div class="Second_teaser_img">
-          <img src="./assets/Single_hand.png" />
+          <img src="./Single_hand.png" />
         </div>
         <div class="Second_teaser_content">
           <div class="Second_teaser_content_box">
@@ -474,8 +474,8 @@
                 <div class="card">
                   <div class="image_bg">
                     <img
-                      src="./assets/psoriasis_treatment@2x.png"
-                      alt="Denim Jeans"
+                      src="./psoriasis_treatment@2x.png"
+                      alt="psoriasis_treatment"
                     />
                   </div>
                   <div class="card_content">
@@ -495,7 +495,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/suburn_balm@2x.png" alt="Denim Jeans" />
+                    <img src="./suburn_balm@2x.png" alt="suburn_balm" />
                   </div>
                   <div class="card_content">
                     <h5>Sunburn Balm</h5>
@@ -516,7 +516,7 @@
               <div class="product_1">
                 <div class="card">
                   <div class="image_background img_back">
-                    <img src="./assets/soothbottle.png" />
+                    <img src="./soothbottle.png" />
                   </div>
                   <div class="card_content">
                     <h5>Psoriasis Cream</h5>
@@ -534,7 +534,7 @@
               <div class="product_2">
                 <div class="card">
                   <div class="image_bg">
-                    <img src="./assets/vitiglio_treatment@2x.png" />
+                    <img src="./vitiglio_treatment@2x.png" />
                   </div>
                   <div class="card_content">
                     <h5>Vitiligio Treatment</h5>
@@ -573,17 +573,17 @@
           </div>
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./assets/cacao.png" />
+              <img src="./cacao.png" />
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/honey.png" />
+              <img src="./honey.png" />
               <h6>Honey</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/mint.png" />
+              <img src="./mint.png" />
               <h6>Mint</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
@@ -591,17 +591,17 @@
 
           <div class="upper_image_tiles">
             <div class="image_tiles_data">
-              <img src="./assets/coconut_root.png" />
+              <img src="./coconut_root.png" />
               <h6>Coconut root</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/flour.png" />
+              <img src="./flour.png" />
               <h6>Flour</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
             <div class="image_tiles_data">
-              <img src="./assets/cacao_1.png" />
+              <img src="./cacao_1.png" />
               <h6>Cacao</h6>
               <p>Lorem ipsum dolar et al</p>
             </div>
